--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "@sanity/client": "^6.15.20",
+    "@sanity/image-url": "^1.0.2",
+    "aos": "^2.3.4",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.1.7",
+    "i18next": "^23.11.2",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.1",
+    "i18next-resources-to-backend": "^1.2.1",
+    "next": "^14.2.3",
+    "next-i18n-router": "^5.4.2",
+    "next-intl": "^3.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.1",
+    "react-icons": "^5.1.0",
+    "react-social-icons": "^6.16.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
